# subsite-with-static

./: README.md  cabal.project  flake.nix  subsite-with-static.cabal
src/: Main.hs  Subsite.hs
src/Subsite/: Data.hs
